unpackaged/main/default/objects/Product2/fields/Actualizado__c.field-meta.xml
<CustomField>
    <fullName>Actualizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualizado</label>
    <type>Checkbox</type>
</CustomField>