unpackaged/main/default/objects/Product2/fields/Beneficio2__c.field-meta.xml
<CustomField>
    <fullName>Beneficio2__c</fullName>
    <formula>IF(  Precio_de_Compra_con_Impuestos__c= 0, 0.00, (Precio_Venta__c  /   Precio_de_Compra_con_Impuestos__c)-1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Beneficio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>