unpackaged/main/default/objects/Product2/fields/Clonado__c.field-meta.xml
<CustomField>
    <fullName>Clonado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clonado</label>
    <type>Checkbox</type>
</CustomField>