unpackaged/main/default/objects/Product2/fields/Codigo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Producto__c</fullName>
    <displayFormat>PRD-{00000}</displayFormat>
    <label>Código de Producto</label>
    <type>AutoNumber</type>
</CustomField>