unpackaged/main/default/objects/Product2/fields/Codigo_de_Producto_Javer__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Producto_Javer__c</fullName>
    <label>Id Vivienda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>