unpackaged/main/default/objects/Product2/fields/Codigo_Producto_Original__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Producto_Original__c</fullName>
    <label>Código Producto Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>