unpackaged/main/default/objects/Product2/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Dirección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>