unpackaged/main/default/objects/Product2/fields/En_Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>En_Plan_de_Venta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En Plan de Venta</label>
    <type>Checkbox</type>
</CustomField>