unpackaged/main/default/objects/Product2/fields/Estatus_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Vivienda__c</fullName>
    <formula>TEXT( Vivienda__r.Estatus__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Vivienda</label>
    <type>Text</type>
</CustomField>