unpackaged/main/default/objects/Product2/fields/Estatus_Vivienda_F__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Vivienda_F__c</fullName>
    <formula>Vivienda__r.Estatus_Vivienda__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Vivienda (No)</label>
    <type>Text</type>
</CustomField>