unpackaged/main/default/objects/Product2/fields/Fechas__c.field-meta.xml
<CustomField>
    <fullName>Fechas__c</fullName>
    <label>Fechas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>