unpackaged/main/default/objects/Product2/fields/Fraccionamiento_Selected__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fraccionamiento Selected</label>
    <type>Checkbox</type>
</CustomField>