unpackaged/main/default/objects/Product2/fields/Fraccionamientos__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamientos__c</fullName>
    <label>Fraccionamientos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>