unpackaged/main/default/objects/Product2/fields/Fraccionamientos_Vencidos__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamientos_Vencidos__c</fullName>
    <label>Fraccionamientos Vencidos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>