unpackaged/main/default/objects/Product2/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <externalId>true</externalId>
    <label>Id_Externo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>