unpackaged/main/default/objects/Product2/fields/Inactivo__c.field-meta.xml
<CustomField>
    <fullName>Inactivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactivo</label>
    <type>Checkbox</type>
</CustomField>