unpackaged/main/default/objects/Product2/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <label>Lote</label>
    <length>20</length>
    <type>Text</type>
</CustomField>