unpackaged/main/default/objects/Product2/fields/Manzana_F__c.field-meta.xml
<CustomField>
    <fullName>Manzana_F__c</fullName>
    <formula>Vivienda__r.Manzana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manzana_F</label>
    <type>Text</type>
</CustomField>