unpackaged/main/default/objects/Product2/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <defaultValue>IF($RecordType.Name == &#39;Productos Genéricos&#39;, &#39;OFICIAL&#39;, &#39;&#39;)</defaultValue>
    <label>Marca</label>
    <length>100</length>
    <type>Text</type>
</CustomField>