unpackaged/main/default/objects/Product2/fields/Nuevo__c.field-meta.xml
<CustomField>
    <fullName>Nuevo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Nuevo</label>
    <type>Checkbox</type>
</CustomField>