unpackaged/main/default/objects/Product2/fields/Num_Interior_F__c.field-meta.xml
<CustomField>
    <fullName>Num_Interior_F__c</fullName>
    <formula>Vivienda__r.Num_Interior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Interior</label>
    <type>Text</type>
</CustomField>