unpackaged/main/default/objects/Product2/fields/Num_Interno__c.field-meta.xml
<CustomField>
    <fullName>Num_Interno__c</fullName>
    <label>Num Interno</label>
    <length>20</length>
    <type>Text</type>
</CustomField>