unpackaged/main/default/objects/Product2/fields/Numero_Filtro__c.field-meta.xml
<CustomField>
    <fullName>Numero_Filtro__c</fullName>
    <description>Se crea este campo para poder filtrar en diferentes campos de búsqueda de otros objetos relacionados a producto</description>
    <label>Número Filtro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>