unpackaged/main/default/objects/Product2/fields/Plaza__c.field-meta.xml
<CustomField>
    <fullName>Plaza__c</fullName>
    <label>Plaza</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queretaro</fullName>
            </value>
            <value>
                <fullName>Nuevo Leon</fullName>
            </value>
            <value>
                <fullName>Estado de Mexico</fullName>
            </value>
            <value>
                <fullName>Jalisco</fullName>
            </value>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Distrito Federal</fullName>
            </value>
            <value>
                <fullName>San Luis Potosi</fullName>
            </value>
            <value>
                <fullName>Quintana Roo</fullName>
            </value>
            <value>
                <fullName>Guanajuato</fullName>
            </value>
            <value>
                <fullName>Tamaulipas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>