unpackaged/main/default/objects/Product2/fields/Plaza_Selected__c.field-meta.xml
<CustomField>
    <fullName>Plaza_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plaza Selected</label>
    <type>Checkbox</type>
</CustomField>