unpackaged/main/default/objects/Product2/fields/Plazas__c.field-meta.xml
<CustomField>
    <fullName>Plazas__c</fullName>
    <label>Plazas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>