unpackaged/main/default/objects/Product2/fields/Plazas_Sin_Fracc__c.field-meta.xml
<CustomField>
    <fullName>Plazas_Sin_Fracc__c</fullName>
    <label>Plazas Sin Fracc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>