unpackaged/main/default/objects/Product2/fields/Precio_de_Compra_con_Impuestos__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_Compra_con_Impuestos__c</fullName>
    <formula>Precio_de_Compra__c + (Precio_de_Compra__c *  IVA__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>