unpackaged/main/default/objects/Product2/fields/Precio_de_Venta_Sugerido__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_Venta_Sugerido__c</fullName>
    <formula>Precio_de_Compra_con_Impuestos__c * 1.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de Venta Sugerido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>