unpackaged/main/default/objects/Product2/fields/Precio_Total__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total__c</fullName>
    <formula>Precio_Venta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total PV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>