unpackaged/main/default/objects/Product2/fields/Precio_Venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_Venta__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Precio Venta al Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>