unpackaged/main/default/objects/Product2/fields/Producto_Original__c.field-meta.xml
<CustomField>
    <fullName>Producto_Original__c</fullName>
    <label>Producto Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>