unpackaged/main/default/objects/Product2/fields/ProductoProveedorRelacion__c.field-meta.xml
<CustomField>
    <fullName>ProductoProveedorRelacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductoProveedorRelacion</label>
    <referenceTo>ProductoProveedorJunction__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Proveedores</relationshipName>
    <type>Lookup</type>
</CustomField>