unpackaged/main/default/objects/Product2/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proveedor</label>
    <referenceTo>Proveedor__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>