unpackaged/main/default/objects/Product2/fields/Proveedor_Selected__c.field-meta.xml
<CustomField>
    <fullName>Proveedor_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proveedor Selected</label>
    <type>Checkbox</type>
</CustomField>