unpackaged/main/default/objects/Product2/fields/Relaci_n_Precio_Producto__c.field-meta.xml
<CustomField>
    <fullName>Relaci_n_Precio_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relación Precio Producto</label>
    <referenceTo>Relacion_Precios_Producto__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>