unpackaged/main/default/objects/Product2/fields/Tiene_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Vivienda__c</fullName>
    <formula>NOT(ISBLANK(Vivienda__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Vivienda</label>
    <type>Checkbox</type>
</CustomField>