unpackaged/main/default/objects/Product2/fields/Tipo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Producto__c</fullName>
    <label>Tipo de Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casa Muestra</fullName>
            </value>
            <value>
                <fullName>Complementos</fullName>
            </value>
            <value>
                <fullName>Otros Gastos</fullName>
            </value>
            <value>
                <fullName>Paquete</fullName>
            </value>
            <value>
                <fullName>Promoción de Venta</fullName>
            </value>
            <value>
                <fullName>Promoción en Especie</fullName>
            </value>
            <value>
                <fullName>Regalo de Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>