unpackaged/main/default/objects/Product2/fields/Unidad_Privada__c.field-meta.xml
<CustomField>
    <fullName>Unidad_Privada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unidad Privada</label>
    <type>Checkbox</type>
</CustomField>