unpackaged/main/default/objects/Product2/fields/Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Vivienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vivienda</label>
    <referenceTo>Vivienda__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>