unpackaged/main/default/objects/Product2/recordTypes/Complemento.recordType-meta.xml
<RecordType>
    <fullName>Complemento</fullName>
    <active>false</active>
    <label>Complemento</label>
</RecordType>