unpackaged/main/default/objects/Product2/recordTypes/Otros_Gastos.recordType-meta.xml
<RecordType>
    <fullName>Otros_Gastos</fullName>
    <active>false</active>
    <label>Otros Gastos</label>
</RecordType>