unpackaged/main/default/objects/Product2/recordTypes/Paquetes.recordType-meta.xml
<RecordType>
    <fullName>Paquetes</fullName>
    <active>true</active>
    <label>Paquetes</label>
</RecordType>