unpackaged/main/default/objects/Product2/recordTypes/Productos_Genericos.recordType-meta.xml
<RecordType>
    <fullName>Productos_Genericos</fullName>
    <active>true</active>
    <label>Productos Genéricos</label>
</RecordType>