unpackaged/main/default/objects/Product2/recordTypes/Promocion_de_Precio.recordType-meta.xml
<RecordType>
    <fullName>Promocion_de_Precio</fullName>
    <active>false</active>
    <label>Promoción de Precio</label>
</RecordType>