unpackaged/main/default/objects/Product2/recordTypes/Promocion_de_Venta.recordType-meta.xml
<RecordType>
    <fullName>Promocion_de_Venta</fullName>
    <active>true</active>
    <label>Promoción de Venta</label>
</RecordType>