unpackaged/main/default/objects/Product2/recordTypes/Regalos_MKT.recordType-meta.xml
<RecordType>
    <fullName>Regalos_MKT</fullName>
    <active>true</active>
    <label>Regalos MKT</label>
</RecordType>