unpackaged/main/default/objects/Product2/recordTypes/Vivienda.recordType-meta.xml
<RecordType>
    <fullName>Vivienda</fullName>
    <active>true</active>
    <label>Vivienda</label>
</RecordType>