unpackaged/main/default/objects/Product2/validationRules/Descripcion_Producto_Vacia.validationRule-meta.xml
<ValidationRule>
    <fullName>Descripcion_Producto_Vacia</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Description)</errorConditionFormula>
    <errorMessage>Añadir descripción del producto</errorMessage>
</ValidationRule>