unpackaged/main/default/objects/Product2/validationRules/No_modificar_descripcion_producto.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_descripcion_producto</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Description)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>No se puede modificar el valor una vez que se ha grabado [Descripción]</errorMessage>
</ValidationRule>