unpackaged/main/default/objects/Product2/validationRules/No_negativo_beneficio.validationRule-meta.xml
<ValidationRule>
    <fullName>No_negativo_beneficio</fullName>
    <active>false</active>
    <errorConditionFormula>Beneficio__c &lt; 0</errorConditionFormula>
    <errorMessage>No se permiten valores negativos</errorMessage>
</ValidationRule>