unpackaged/main/default/objects/Product2/validationRules/No_negativo_iva.validationRule-meta.xml
<ValidationRule>
    <fullName>No_negativo_iva</fullName>
    <active>true</active>
    <errorConditionFormula>IVA__c &lt; 0</errorConditionFormula>
    <errorMessage>No se permiten valores negativos</errorMessage>
</ValidationRule>