unpackaged/main/default/objects/Product2/validationRules/No_negativo_Precio_Compra.validationRule-meta.xml
<ValidationRule>
    <fullName>No_negativo_Precio_Compra</fullName>
    <active>true</active>
    <errorConditionFormula>Precio_de_Compra__c &lt; 0</errorConditionFormula>
    <errorMessage>No se permiten valores negativos</errorMessage>
</ValidationRule>