unpackaged/main/default/objects/Product2/validationRules/no_negativo_Precio_Venta.validationRule-meta.xml
<ValidationRule>
    <fullName>no_negativo_Precio_Venta</fullName>
    <active>true</active>
    <errorConditionFormula>Precio_Venta__c &lt; 0</errorConditionFormula>
    <errorMessage>No se permiten valores negativos</errorMessage>
</ValidationRule>