unpackaged/main/default/objects/Product2/validationRules/Precio_de_venta_mayor_a_cero.validationRule-meta.xml
<ValidationRule>
    <fullName>Precio_de_venta_mayor_a_cero</fullName>
    <active>true</active>
    <description>No se permite dejar este campo en blanco o con precio $0</description>
    <errorConditionFormula>IF(
    AND(
        RecordType.Name != &quot;Regalos MKT&quot;,
        OR(
            ISNULL(Precio_Venta__c),
            Precio_Venta__c &lt;= 0
        )
    ), 
true, 
false
)</errorConditionFormula>
    <errorDisplayField>Precio_Venta__c</errorDisplayField>
    <errorMessage>Ingresar un valor mayor a 0</errorMessage>
</ValidationRule>