unpackaged/main/default/objects/Product2/validationRules/Restriccion_perfil_compras_corporativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriccion_perfil_compras_corporativo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Profile.Name = &#39;Compras Corporativo&#39;,
RecordType.Name &lt;&gt; &quot;Paquetes&quot;,
OR(
ISCHANGED(Activo__c),
ISCHANGED(Beneficio__c),
ISCHANGED(Codigo_de_Producto_Javer__c),
ISCHANGED(Inactivo__c),
ISCHANGED(IVA__c),
ISCHANGED(Marca__c),
ISCHANGED(Plaza__c),
ISCHANGED(Precio_Venta__c),
ISCHANGED(Proveedor__c),
ISCHANGED(Vigencia_Hasta__c),
ISCHANGED(Description)
))</errorConditionFormula>
    <errorMessage>El perfil de Compras Corporativo no puede editar este tipo de producto.</errorMessage>
</ValidationRule>