unpackaged/main/default/objects/Product2/validationRules/Valor_oficial_producto_generico.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor_oficial_producto_generico</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(RecordType.Name == &quot;Productos Genéricos&quot;,ISCHANGED(Marca__c) ) , true, false)</errorConditionFormula>
    <errorDisplayField>Marca__c</errorDisplayField>
    <errorMessage>En los productos genéricos no es posible editar la marca</errorMessage>
</ValidationRule>