unpackaged/main/default/objects/Product2/listViews/Mis_Productos.listView-meta.xml
<ListView>
    <fullName>Mis_Productos</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Beneficio__c</columns>
    <columns>Beneficio2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fraccionamientos__c</field>
        <operation>equals</operation>
        <value>BOSQUES DEL NEVADO</value>
    </filters>
    <label>Mis Productos</label>
</ListView>