unpackaged/main/default/objects/Product2/listViews/Productos_paquetes.listView-meta.xml
<ListView>
    <fullName>Productos_paquetes</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <label>Productos paquetes</label>
    <sharedTo>
        <role>Asesor_Ventas</role>
    </sharedTo>
</ListView>